--- a/hakkimda/index.html
+++ b/hakkimda/index.html
@@ -139,7 +139,7 @@ Selçuk Bayraktar Fatih Sultan Mehmet Abdülhamid Han Bildiğim Diller ve Kullan
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "178"
+    "wordCount": "175"
   }
   </script>
     <script type="application/ld+json">
@@ -453,21 +453,21 @@ Selçuk Bayraktar Fatih Sultan Mehmet Abdülhamid Han Bildiğim Diller ve Kullan
 <td>Web Tarayıcısı</td>
 <td>Python</td>
 <td><a href="https://github.com/gamerYazilimci45/Anka" target="_blank" rel="noreferrer">Anka Browser</a></td>
-<td>v1.9.5</td>
+<td></td>
 </tr>
 <tr>
 <td>TermiNote</td>
 <td>Terminal Tabanlı Not Uygulaması</td>
 <td>Python</td>
 <td><a href="https://github.com/gamerYazilimci45/TermiNote" target="_blank" rel="noreferrer">TermiNote</a></td>
-<td>v2.7</td>
+<td></td>
 </tr>
 <tr>
 <td>NomTex</td>
 <td>Windows için metin editörü(terk edilmiş proje)</td>
-<td>C# and .NET</td>
+<td>C# ve .NET</td>
 <td><a href="https://github.com/gamerYazilimci45/NomTex" target="_blank" rel="noreferrer">NomTex</a></td>
-<td>v1.5</td>
+<td></td>
 </tr>
 </tbody>
 </table>
