--- a/hakkimda/index.html
+++ b/hakkimda/index.html
@@ -142,7 +142,7 @@ Yazılım ve Program Geliştiriciliği Linux İşletim Sistemleri Siber Güvenli
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "188"
+    "wordCount": "192"
   }
   </script>
     <script type="application/ld+json">
@@ -646,30 +646,32 @@ Yazılım ve Program Geliştiriciliği Linux İşletim Sistemleri Siber Güvenli
 <th>Proje Açıklaması</th>
 <th>Proje Dili</th>
 <th>Proje GitHub</th>
-<th>Son Versiyon</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>Anka Browser</td>
-<td>Web Tarayıcısı</td>
+<td>Ağ Tarayıcısı</td>
 <td>Python</td>
 <td><a href="https://github.com/gamerYazilimci45/Anka" target="_blank" rel="noreferrer">Anka Browser</a></td>
-<td></td>
+</tr>
+<tr>
+<td>catecli</td>
+<td>Terminal Aracı</td>
+<td>C++</td>
+<td><a href="https://github.com/gamerYazilimci45/catecli" target="_blank" rel="noreferrer">catecli</a></td>
 </tr>
 <tr>
 <td>TermiNote</td>
 <td>Terminal Tabanlı Not Uygulaması</td>
 <td>Python</td>
 <td><a href="https://github.com/gamerYazilimci45/TermiNote" target="_blank" rel="noreferrer">TermiNote</a></td>
-<td></td>
 </tr>
 <tr>
 <td>NomTex</td>
-<td>Windows için metin editörü(terk edilmiş proje)</td>
-<td>C# ve .NET</td>
+<td>Windows için Metin Editörü(terk edilmiş proje, geliştirilmiyor.)</td>
+<td>C# and .NET</td>
 <td><a href="https://github.com/gamerYazilimci45/NomTex" target="_blank" rel="noreferrer">NomTex</a></td>
-<td></td>
 </tr>
 </tbody>
 </table>
